added python code with highlighting

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ limitations under the License.
   <link rel="stylesheet" href="bundle.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons" rel="stylesheet" type="text/css">
   <script src="lib.js"></script>
+
+  <!-- Should not need this -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css"/>
+
 </head>
 <body>
   <!-- GitHub link -->
@@ -360,6 +364,16 @@ limitations under the License.
       </div>
     </div>
 
+  </div>
+
+  <!-- Authored by https://github.com/jameshfisher -->
+  <div class="l--page">
+    <div class="column">
+      <div class="card">
+        <h2 style="color:grey;">This neural network as a Python function</h2>
+        <pre><code id="network-as-python" class="language-python"></code></pre>
+      </div>
+    </div>
   </div>
 
   <!-- More -->
