rollback highlighting for prod

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ limitations under the License.
   <script src="lib.js"></script>
 
   <!-- Should not need this -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css"/>
+  <!-- ROLLBACK HIGHLIGHTING -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css"/> -->
 
 </head>
 <body>
