prod broken, hm

--- a/index.html
+++ b/index.html
@@ -367,11 +367,11 @@ limitations under the License.
 
   </div>
 
-  <!-- Authored by https://github.com/jameshfisher -->
+  <!-- Authored by https://github.com/jameshfisher and adapted by Matt -->
   <div class="l--page">
     <div class="column">
       <div class="card">
-        <h2 style="color:grey;">This neural network as a Python function</h2>
+        <h2>This neural network as a Python function</h2>
         <pre><code id="network-as-python" class="language-python"></code></pre>
       </div>
     </div>
