--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@ limitations under the License.
   <script src="lib.js"></script>
 
   <!-- Should not need this -->
-  <!-- ROLLBACK HIGHLIGHTING -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css"/> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css"/>
 
 </head>
 <body>
@@ -379,7 +378,6 @@ limitations under the License.
 
   <!-- More -->
   <div class="more">
-    <!-- <button class="mdl-button mdl-js-button mdl-button--icon"><i class="material-icons">keyboard_arrow_down</i></button> -->
     <button class="mdl-button mdl-js-button mdl-button--fab">
       <i class="material-icons">keyboard_arrow_down</i>
     </button>
