scaling uploads, towards #25, closes #31 and #32

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ limitations under the License.
 
     <div class="l--body">
       <h2>How do I make my own datasets?</h2>
-      <p>You will need to define a machine learning task with 2 features and one target. About 400 records is ideal — split 50% positive and 50% negative classes for a classification problem. Scale the features using a Z-score standardization, and multiply the result by 2. The target should be -1 and 1 for classification, or in the range [-1, 1] for regression. <a href="https://github.com/agile-geoscience/rocky-playground/blob/master/notebooks/Data_for_Playground.ipynb">Here's an example of how to prepare data.</a></p>
+      <p>You will need to define a machine learning task with 2 features and one target. About 400 records is ideal — split 50% positive and 50% negative classes for a classification problem. The features will be scaled using Z-score standardization (multiplied by 2 for complicated reasons). The target should be -1 and 1 for classification, or in the range [-1, 1] for regression. <a href="https://github.com/agile-geoscience/rocky-playground/blob/master/notebooks/Data_for_Playground.ipynb">Here's an example of how to prepare data.</a></p>
       <p>Once you have a JSON file, you can upload it using the button with the <i class="material-icons">file_upload</i> icon (top left).</p>
     </div>
 
