--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ limitations under the License.
 ==============================================================================-->
 <html>
 <head lang="en">
-  <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=1024">
   <meta name="keywords" content="neural networks,machine learning,geoscience,geocomputing">
