--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ limitations under the License.
             <option value="leakyrelu">Leaky ReLU</option>
             <option value="elu">ELU</option>
             <option value="swish">Swish</option>
+            <option value="gelu">GELU</option>
           </select>
         </div>
       </div>
